--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -8,16 +8,39 @@ on:
         types: [published]
     
 jobs:
-    publish:
+    build:
+
         runs-on: ubuntu-latest
-        name: Publish to Conda
+        strategy:
+            matrix:
+                python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+
         steps:
             - name: Checkout
               uses: actions/checkout@v2
 
-            - name: publish-to-conda
-              uses: fcakyon/conda-publish-action@v1.3
+            - name: Set up Python ${{ matrix.python-version }}
+              uses: actions/setup-python@v2
               with:
-                  subdir: 'conda'
-                  anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
-                  platforms: 'win osx linux'
+                  python-version: ${{ matrix.python-version }}
+
+            - name: Install prerequisits
+              run: |
+                  sudo apt-get update
+                  sudo apt-get install libsuitesparse-dev
+
+            - name: Install package and dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  python -m pip install --upgrade numpy
+                  python -m pip install --upgrade .[full]
+
+            - name: Install Conda Build
+              run: |
+                  $CONDA/bin/conda install conda-build
+                  $CONDA/bin/conda install anaconda-client
+
+            - name: Build package
+              run: conda-build .
+
+              $(conda info --root)/conda-bld
