--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -12,7 +12,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-18.04, windows-latest, macos-latest]
+                os: [ubuntu-latest, windows-latest, macos-latest]
                 
         steps:
             - name: Checkout
@@ -20,8 +20,6 @@ jobs:
             
             - name: Setup Python 
               uses: actions/setup-python@v2
-              with:
-                  python-version: '3.7'
 
             - name: Install cibuildwheel
               run: |
@@ -44,12 +42,14 @@ jobs:
                   pip3 install numpy
             
             - name: Build wheels
+              run: python -m cibuildwheel --output-dir wheelhouse
               env:
                   CIBW_SKIP: "*-win32 *-manylinux_i686 *-manylinux_aarch64 *-manylinux_ppc64le *-manylinux_s390x pp3*-macosx*"
-              run: |
-                  python -m cibuildwheel --output-dir wheelhouse
+                  CIBW_BUILD_VERBOSITY: 1
+                  CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
             
-            - uses: actions/upload-artifact@v2
+            - name: Upload artifacts
+              uses: actions/upload-artifact@v2
               with:
                   path: ./wheelhouse/*.whl
                   
@@ -57,17 +57,17 @@ jobs:
         name: Build source distribution
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - name: Checkout
+              uses: actions/checkout@v2
 
             - name: Install Python
               uses: actions/setup-python@v2
-              with:
-                  python-version: '3.7'
             
             - name: Build sdist
               run: python setup.py sdist
             
-            - uses: actions/upload-artifact@v2
+            - name: Upload artifacts
+              uses: actions/upload-artifact@v2
               with:
                   path: dist/*.tar.gz
 
