--- a/.github/workflows/deploy-pypi3.yml
+++ b/.github/workflows/deploy-pypi3.yml
@@ -27,7 +27,7 @@ jobs:
             - name: Upload artifacts
               uses: actions/upload-artifact@v2
               with:
-                  path: ./wheelhouse/*.whl
+                  path: dist/wheelhouse/*.whl
 
     build_sdist:
         name: Build source distribution
