--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -62,12 +62,18 @@ jobs:
                   python -m pip install --upgrade numpy
                   # python -m pip install --upgrade .[full]
 
-            - name: Install Conda Build
+            - name: Install conda, conda-build, and conda-client
               run: |
-                  $CONDA/bin/conda install conda-build
-                  $CONDA/bin/conda install anaconda-client
+                  wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+                  bash miniconda.sh -b -p $HOME/miniconda
+                  export PATH="$HOME/miniconda/bin:$PATH"
+                  hash -r
+                  conda config --set always_yes yes --set changeps1 no
+                  conda update -q conda
+                  conda install conda-build
+                  conda install anaconda-client
 
-            - name: Build and Upload to Anaconda cloud
+            - name: Build and upload to Anaconda cloud
               run: |
                   anaconda login --token ${{ secrets.ANACONDA_TOKEN }} 
                   conda config --set anaconda_upload yes
