--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -72,9 +72,11 @@ jobs:
                   conda update -q conda
                   conda install conda-build
                   conda install anaconda-client
+                  which conda-build
 
             - name: Build and upload to Anaconda cloud
               run: |
+                  which conda-build
                   conda config --set anaconda_upload yes
                   conda-build --token ${{ secrets.ANACONDA_TOKEN }} .
               env:
