pin numpy version2

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -21,14 +21,14 @@ requirements:
     host:
         - python {{ python }}
         - setuptools
-        - numpy
+        - numpy>=1.16.5
         - cython
         - pip
         - pytest-runner
     run:
         - python {{ python }}
         - suitesparse
-        - numpy
+        - numpy>=1.16.5
         - scipy
         - matplotlib
         - seaborn
