--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -46,20 +46,20 @@ jobs:
               uses: actions/checkout@v2
 
             # - name: Set up Python ${{ matrix.python-version }}
-            - name: Set up Python
-              uses: actions/setup-python@v2
+            # - name: Set up Python
+              # uses: actions/setup-python@v2
               # with:
               #     python-version: ${{ matrix.python-version }}
 
-            - name: Install prerequisits
-              run: |
-                  sudo apt-get update
-                  sudo apt-get install libsuitesparse-dev
+            # - name: Install prerequisits
+            #   run: |
+            #       sudo apt-get update
+            #       sudo apt-get install libsuitesparse-dev
 
-            - name: Install package and dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  python -m pip install --upgrade numpy
+            # - name: Install package and dependencies
+              # run: |
+                  # python -m pip install --upgrade pip
+                  # python -m pip install --upgrade numpy
                   # python -m pip install --upgrade .[full]
 
             - name: Install conda, conda-build, and conda-client
