--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -1,29 +1,3 @@
-name: deploy-conda
-
-on:
-    push:
-        branches:
-            - main
-    release:
-        types: [published]
-
-jobs:
-    publish:
-        runs-on: ubuntu-latest
-        name: Publish to Conda
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-
-            - name: publish-to-conda
-              uses: fcakyon/conda-publish-action@v1.3
-              with:
-                  subdir: 'conda'
-                  anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
-                  platforms: 'win osx linux'
-              env:
-                  CYTHON_BUILD_IN_SOURCE: 'true'
-
 # name: deploy-conda
 #
 # on:
@@ -34,47 +8,83 @@ jobs:
 #         types: [published]
 #
 # jobs:
-#     build:
-#
+#     publish:
 #         runs-on: ubuntu-latest
-#         # strategy:
-#         #     matrix:
-#         #         python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
-#
+#         name: Publish to Conda
 #         steps:
 #             - name: Checkout
 #               uses: actions/checkout@v2
 #
-#             # - name: Set up Python ${{ matrix.python-version }}
-#             # - name: Set up Python
-#               # uses: actions/setup-python@v2
-#               # with:
-#               #     python-version: ${{ matrix.python-version }}
-#
-#             # - name: Install prerequisits
-#             #   run: |
-#             #       sudo apt-get update
-#             #       sudo apt-get install libsuitesparse-dev
-#
-#             # - name: Install package and dependencies
-#               # run: |
-#                   # python -m pip install --upgrade pip
-#                   # python -m pip install --upgrade numpy
-#                   # python -m pip install --upgrade .[full]
-#
-#             - name: Install conda, conda-build, and conda-client
-#               run: |
-#                   wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
-#                   bash miniconda.sh -b -p $HOME/miniconda
-#                   export PATH="$HOME/miniconda/bin:$PATH"
-#                   hash -r
-#                   conda config --set always_yes yes --set changeps1 no
-#                   conda update -q conda
-#                   conda install conda-build
-#                   conda install anaconda-client
-#                   conda config --set anaconda_upload yes
-#                   conda-build --token ${{ secrets.ANACONDA_TOKEN }} .
+#             - name: publish-to-conda
+#               uses: fcakyon/conda-publish-action@v1.3
+#               with:
+#                   subdir: 'conda'
+#                   anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
+#                   platforms: 'win osx linux'
 #               env:
 #                   CYTHON_BUILD_IN_SOURCE: 'true'
-#
-#               # $(conda info --root)/conda-bld
+
+name: deploy-conda
+
+on:
+    push:
+        branches:
+            - main
+    release:
+        types: [published]
+
+jobs:
+    build:
+
+        runs-on: ubuntu-latest
+        # strategy:
+        #     matrix:
+        #         python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+
+            # - name: Set up Python ${{ matrix.python-version }}
+            # - name: Set up Python
+              # uses: actions/setup-python@v2
+              # with:
+              #     python-version: ${{ matrix.python-version }}
+
+            # - name: Install prerequisits
+            #   run: |
+            #       sudo apt-get update
+            #       sudo apt-get install libsuitesparse-dev
+
+            # - name: Install package and dependencies
+              # run: |
+                  # python -m pip install --upgrade pip
+                  # python -m pip install --upgrade numpy
+                  # python -m pip install --upgrade .[full]
+
+            - name: Install conda, conda-build, and conda-client
+              run: |
+                  wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+                  bash miniconda.sh -b -p $HOME/miniconda
+                  export PATH="$HOME/miniconda/bin:$PATH"
+                  hash -r
+                  conda config --set always_yes yes --set changeps1 no
+                  conda update -q conda
+                  conda install conda-build
+                  conda install anaconda-client
+                  # conda config --set anaconda_upload yes
+
+            - name: Build package
+              run: |
+                  # conda-build --token ${{ secrets.ANACONDA_TOKEN }} .
+                  conda-build --output-folder . .
+                  conda convert -p osx-64 linux-64/*.tar.bz2
+                  conda convert -p win-64 linux-64/*.tar.bz2
+                  anaconda upload --label main linux-64/*.tar.bz2
+                  anaconda upload --label main osx-64/*.tar.bz2
+                  anaconda upload --label main win-64/*.tar.bz2
+              env:
+                  CYTHON_BUILD_IN_SOURCE: 'true'
+                  ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
+
+              # $(conda info --root)/conda-bld
