--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -73,6 +73,7 @@ jobs:
                   conda install conda-build
                   conda install anaconda-client
                   # conda config --set anaconda_upload yes
+                  echo "::set-env name=PATH::$PATH"   # save env variables for the next run
 
             - name: Build package
               run: |
