--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -73,10 +73,10 @@ jobs:
                   conda install conda-build
                   conda install anaconda-client
                   # conda config --set anaconda_upload yes
-                  echo "::set-env name=PATH::$PATH"   # save env variables for the next run
 
             - name: Build package
               run: |
+                  export PATH="$HOME/miniconda/bin:$PATH"
                   # conda-build --token ${{ secrets.ANACONDA_TOKEN }} .
                   conda-build --output-folder . .
                   conda convert -p osx-64 linux-64/*.tar.bz2
