--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -91,9 +91,9 @@ jobs:
             - name: Upload to Anaconda Cloud
               run: |
                   export PATH="$HOME/miniconda/bin:$PATH"
-                  anaconda upload --label main linux-64/*.tar.bz2
-                  anaconda upload --label main osx-64/*.tar.bz2
-                  anaconda upload --label main win-64/*.tar.bz2
+                  anaconda upload --force --label main linux-64/*.tar.bz2
+                  anaconda upload --force --label main osx-64/*.tar.bz2
+                  anaconda upload --force --label main win-64/*.tar.bz2
               env:
                   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
 
