--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -1,29 +1,3 @@
-# name: deploy-conda
-#
-# on:
-#     push:
-#         branches:
-#             - main
-#     release:
-#         types: [published]
-#
-# jobs:
-#     publish:
-#         runs-on: ubuntu-latest
-#         name: Publish to Conda
-#         steps:
-#             - name: Checkout
-#               uses: actions/checkout@v2
-#
-#             - name: publish-to-conda
-#               uses: fcakyon/conda-publish-action@v1.3
-#               with:
-#                   subdir: 'conda'
-#                   anacondatoken: ${{ secrets.ANACONDA_TOKEN }}
-#                   platforms: 'win osx linux'
-#               env:
-#                   CYTHON_BUILD_IN_SOURCE: 'true'
-
 name: deploy-conda
 
 on:
@@ -34,33 +8,11 @@ on:
         types: [published]
 
 jobs:
-    build:
-
+    build_conda:
         runs-on: ubuntu-latest
-        # strategy:
-        #     matrix:
-        #         python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
-
         steps:
             - name: Checkout
               uses: actions/checkout@v2
-
-            # - name: Set up Python ${{ matrix.python-version }}
-            # - name: Set up Python
-              # uses: actions/setup-python@v2
-              # with:
-              #     python-version: ${{ matrix.python-version }}
-
-            # - name: Install prerequisits
-            #   run: |
-            #       sudo apt-get update
-            #       sudo apt-get install libsuitesparse-dev
-
-            # - name: Install package and dependencies
-              # run: |
-                  # python -m pip install --upgrade pip
-                  # python -m pip install --upgrade numpy
-                  # python -m pip install --upgrade .[full]
 
             - name: Install conda, conda-build, and conda-client
               run: |
@@ -72,17 +24,15 @@ jobs:
                   conda update -q conda
                   conda install conda-build
                   conda install anaconda-client
-                  # conda config --set anaconda_upload yes
 
             - name: Build package
               run: |
                   export PATH="$HOME/miniconda/bin:$PATH"
-                  # conda-build --token ${{ secrets.ANACONDA_TOKEN }} .
                   conda-build --output-folder . .
               env:
-                  CYTHON_BUILD_IN_SOURCE: 'true'
+                  CYTHON_BUILD_IN_SOURCE: 'true'  # see setup.py. Avoids a bug when building with multiple python variants
 
-            - name: Convert to mac and winsows
+            - name: Convert linux builds to mac and winsows
               run: |
                   export PATH="$HOME/miniconda/bin:$PATH"
                   conda convert -f -p osx-64 linux-64/*.tar.bz2
@@ -97,4 +47,52 @@ jobs:
               env:
                   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
 
-              # $(conda info --root)/conda-bld
+    test_conda:
+        needs: [build_conda]
+        name: Test on ${{ matrix.os }}
+        runs-on: ${{ matrix.os }}
+        strategy:
+            fail-fast: false
+            matrix:
+                os: [ubuntu-latest, windows-latest, macos-latest]
+
+        steps:
+            - name: Download conda in Linux
+              if: runner.os == 'linux'
+              run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
+
+            - name: Download conda in macOS
+              if: runner.os == 'macos'
+              run: curl https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -o miniconda.sh
+
+            - name: Download conda in Windows
+              if: runner.os == 'Windows'
+              run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe -O miniconda.sh
+
+            - name: Install conda
+                  sh miniconda.sh -b -p $HOME/miniconda
+                  export PATH="$HOME/miniconda/bin:$PATH"
+                  hash -r
+                  conda config --set always_yes yes --set changeps1 no
+                  conda update -q conda
+
+            - name: Checkout
+              uses: actions/checkout@v2
+
+            - name: Test
+              run: |
+                  mkdir ~/tmp
+                  cp -r tests/ examples ~/tmp
+                  cd ~/tmp
+                  export PATH="$HOME/miniconda/bin:$PATH"
+                  source $(conda info --root)/etc/profile.d/conda.sh
+                  
+                  PythonVersions="2.7 3.6 3.7 3.8 3.9"
+                  for PythonVersion in $PythonVersions
+                  do
+                      conda create --name env-${PythonVersion} -c s-ameli python=${PythonVersion} traceinv pytest -y
+                      conda activate env-${PythonVersion}
+                      pytest
+                      conda deactivate
+                      conda remove --name env-${PythonVersion} --all -y
+                  done
