--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -36,7 +36,6 @@ jobs:
                   brew install libomp
 
                   # This is needed to import numpy in pypy3 (but not needed for pypy2 and CPython)
-                  # pip cache remove numpy -qqq
                   brew install openblas
                   OPENBLAS="$(brew --prefix openblas)"
                   pip3 install numpy
@@ -44,7 +43,8 @@ jobs:
             - name: Build wheels
               run: python -m cibuildwheel --output-dir wheelhouse
               env:
-                  CIBW_SKIP: "*-win32 *-manylinux_i686 *-manylinux_aarch64 *-manylinux_ppc64le *-manylinux_s390x pp3*-macosx*"
+                  CIBW_BUILD: "*-manylinux_x86_64 *-macosx_x86_64 *-win_amd64"
+                  CIBW_SKIP: "pp3*-macosx*"
                   CIBW_BUILD_VERBOSITY: 1
                   CIBW_MANYLINUX_X86_64_IMAGE: manylinux1
             
@@ -93,3 +93,35 @@ jobs:
                   verbose: true
                   user: __token__
                   password: ${{ secrets.pypi_password }}
+
+    test_pypi:
+        needs: [upload_pupi]
+        name: Test on ${{ matrix.os }} and Pyhton ${{ matrix.python-version }}
+        runs-on: ${{ matrix.os }}
+        strategy:
+            fail-fast: false
+            matrix:
+                os: [ubuntu-latest, windows-latest, macos-latest]
+                python-version: [2.7, 3.6, 3.7, 3.8, 3.9]
+
+        steps:
+            - name: Setup Python ${{ matrix.python-version }}
+              uses: actions/setup-python@v2
+              with:
+                  python-version: ${{ matrix.python-version }}
+
+            - name: Install packages
+              run: |
+                  python -m pip install --upgrade pip
+                  python -m pip install pytest
+                  python -m pip install TraceInv
+
+            - name: Checkout
+              uses: actions/checkout@v2
+
+            - name: Test
+              run: |
+                  mkdir ~/tmp
+                  cp -r tests/ examples ~/tmp
+                  cd ~/tmp
+                  pytest
