test pypi and conda 2

--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -70,6 +70,7 @@ jobs:
               run: wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Windows-x86_64.exe -O miniconda.sh
 
             - name: Install conda
+              run: |
                   sh miniconda.sh -b -p $HOME/miniconda
                   export PATH="$HOME/miniconda/bin:$PATH"
                   hash -r
