--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -121,12 +121,14 @@ jobs:
 
             - name: Copy test files outside source (Unix)
               if: runner.os != 'Windows'
+              run: |
                   mkdir ~/tmp
                   cp -r tests/ examples ~/tmp
                   cd ~/tmp
 
             - name: Copy test files outside source (Windows)
               if: runner.os == 'Windows'
+              run: |
                   mkdir ~\tmp
                   Copy-Item -Path tests -Destination ~\tmp -Recurse
                   Copy-Item -Path examples -Destination ~\tmp -Recurse
