--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -113,27 +113,28 @@ jobs:
             - name: Install packages
               run: |
                   python -m pip install --upgrade pip
-                  python -m pip install pytest
+                  python -m pip install pytest-cov
                   python -m pip install TraceInv
 
             - name: Checkout
               uses: actions/checkout@v2
 
-            - name: Copy test files outside source (Unix)
-              if: runner.os != 'Windows'
-              run: |
-                  mkdir ~/tmp
-                  cp -r tests/ examples ~/tmp
-                  cd ~/tmp
-
-            - name: Copy test files outside source (Windows)
-              if: runner.os == 'Windows'
-              run: |
-                  mkdir ~\tmp
-                  Copy-Item -Path tests -Destination ~\tmp -Recurse
-                  Copy-Item -Path examples -Destination ~\tmp -Recurse
-                  cd ~\tmp
+            # - name: Copy test files outside source (Unix)
+            #   if: runner.os != 'Windows'
+            #   run: |
+            #       mkdir ~/tmp
+            #       cp -r tests examples ~/tmp
+            #       cd ~/tmp
+            #
+            # - name: Copy test files outside source (Windows)
+            #   if: runner.os == 'Windows'
+            #   run: |
+            #       mkdir ~\tmp
+            #       Copy-Item -Path tests -Destination ~\tmp -Recurse
+            #       Copy-Item -Path examples -Destination ~\tmp -Recurse
+            #       cd ~\tmp
 
             - name: Test
               run: |
+                  mv TraceInv TraceInv-DoNotImport
                   pytest
