--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -11,24 +11,33 @@ jobs:
         runs-on: windows-latest
         strategy:
             matrix:
-                python-version: [3.5, 3.6, 3.7, 3.8]
+                python-version: [2.7,3.5, 3.6, 3.7, 3.8]
 
         steps:
-            - uses: actions/checkout@v2
+            - name: Checkout
+              uses: actions/checkout@v2
+
             - name: Set up Python ${{ matrix.python-version }}
               uses: actions/setup-python@v2
               with:
                   python-version: ${{ matrix.python-version }}
+
             - name: Install package and dependencies
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .
+
+            - name: Install Visual C++ for Python 2.7
+              if: runner.python-version == '2.7'
+              run: choco install vcpython27 -f -y
+
             - name: Test
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
                   python setup.py test 
+
             - name: Coverage
               run: |
                   python -m pip install codecov
