--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -22,15 +22,15 @@ jobs:
               with:
                   python-version: ${{ matrix.python-version }}
 
+            - name: Install Visual C++ for Python 2.7
+              if: runner.python-version == 2.7
+              run: choco install vcpython27 -f -y
+
             - name: Install package and dependencies
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .
-
-            - name: Install Visual C++ for Python 2.7
-              if: runner.python-version == '2.7'
-              run: choco install vcpython27 -f -y
 
             - name: Test
               run: |
