--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -54,7 +54,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                # os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [ubuntu-latest, macos-latest]
 
         # steps:
         #     - name: Setup Miniconda
@@ -91,9 +92,7 @@ jobs:
             - name: Test (in Unix)
               if: runner.os != 'Windows'
               run: |
-                  mkdir ~/tmp
-                  cp -r tests/ examples ~/tmp
-                  cd ~/tmp
+                  mv TraceInv TraceInv-DoNotImport
                   export PATH="$HOME/miniconda/bin:$PATH"
                   source $(conda info --root)/etc/profile.d/conda.sh
                   
@@ -114,6 +113,7 @@ jobs:
             #       Copy-Item -Path tests -Destination ~\tmp -Recurse
             #       Copy-Item -Path examples -Destination ~\tmp -Recurse
             #       cd ~\tmp
+            #       choco install vcpython27 -f -y
             #       $RootDir=$(conda info --root)
             #       . $RootDir\etc\profile.d\conda.sh
             #       $PythonVersions="2.7","3.6","3.7","3.8","3.9"
