--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -55,6 +55,7 @@ jobs:
             fail-fast: false
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
+                python-version: [2.7, 3.6, 3.7, 3.8, 3.9]
 
         steps:
             - name: Setup Miniconda
