--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -111,7 +111,7 @@ jobs:
               run: choco install vcpython27 -f -y
 
             - name: Install package
-              run: conda install -c s-ameli -y
+              run: conda install -c s-ameli traceinv -y
 
             - name: Checkout
               uses: actions/checkout@v2
