--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     run:
         - python {{ python }}
         - suitesparse
-        - numpy>=1.16.5
+        - numpy
         - scipy
         - matplotlib
         - seaborn
