--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -135,7 +135,7 @@ jobs:
                   python --version
                   # python -m pytest
                   # $CONDA/bin/pytest
-                  conda install pytest
+                  conda install pytest-cov
                   which python
                   which conda
                   which pytest
