--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,6 +14,7 @@ source:
 build:
     number: 0
     script: "{{ PYTHON }} -m pip install . -vv"
+    pin_depends: strict
 
 requirements:
     build:
@@ -21,7 +22,7 @@ requirements:
     host:
         - python {{ python }}
         - setuptools
-        - numpy>=1.16.5
+        - numpy
         - cython
         - pip
         - pytest-runner
@@ -50,6 +51,7 @@ about:
     summary: {{ data['description'] }}
     description: {{ data['description'] }}
     doc_url: https://ameli.github.io/TraceInv/index.html
+    doc_source_url: https://github.com/ameli/TraceInv/blob/main/README.rst
     dev_url: https://github.com/ameli/TraceInv
 
 extra:
