--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     host:
         - python {{ python }}
         - setuptools
-        - numpy
+        - numpy>=1.11
         - cython
         - pip
         - pytest-runner
