--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -19,7 +19,7 @@ requirements:
     build:
         - {{ compiler('c') }}
     host:
-        - python
+        - python {{ python }}
         - setuptools
         - numpy>=1.11
         - cython>=0.29
