--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -13,7 +13,8 @@ source:
 
 build:
     number: 0
-    script: "{{ PYTHON }} -m pip install . -vv"
+    script: python setup.py install
+    # script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
     build:
